# neurosim

./: README.md  pyproject.toml
examples/: demo.py  em_dipole_3d.py  karman_vortex_street.py
src/neurosim/: __init__.py  config.py  state.py
src/neurosim/em/: __init__.py  fdtd3d.py
src/neurosim/fluids/: __init__.py  lbm.py  navier_stokes.py
tests/: test_fdtd3d.py  test_fluids.py
